fix: padding on fancybox moves part of player out of view

--- a/css/fancybox.css
+++ b/css/fancybox.css
@@ -777,3 +777,7 @@ body.compensate-for-scrollbar {
 .fancybox-content {
     overflow: hidden;
 }
+
+.fancybox-content.flowplayer {
+    padding: 0;
+}
